tests/snapshots/execution_spec__omit-resolved-by-parent.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  user: User
}

scalar Url

type User {
  address: String
}

schema {
  query: Query
}
