tests/snapshots/execution_spec__rate-limit-field-pass.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "bars": [
        {
          "id": 1
        },
        {
          "id": 3
        },
        {
          "id": 5
        }
      ]
    }
  }
}
