tests/snapshots/execution_spec__rate-limit-field-pass.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream(baseURL: "http://example.com", batch: {delay: 1, headers: [], maxSize: 1000}) {
  query: Query
}

type Bar {
  id: Int
}

type Query {
  bars: [Bar] @http(path: "/bars")
}
