tests/snapshots/execution_spec__rate-limit-type-fail-group-by.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "locations": [
          {
            "column": 9,
            "line": 1
          }
        ],
        "message": "RATE_LIMIT_EXCEEDED"
      }
    ]
  }
}
