tests/snapshots/execution_spec__rate-limit-type-pass-group-by.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Bar {
  id: Int
  name: String
}

type Query {
  bars: [Bar]
}

schema {
  query: Query
}
