tests/snapshots/execution_spec__rate-limit-type-pass.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "bars": [
        {
          "id": 1
        },
        {
          "id": 1
        },
        {
          "id": 2
        },
        {
          "id": 1
        },
        {
          "id": 2
        },
        {
          "id": 2
        }
      ]
    }
  }
}
