tests/snapshots/execution_spec__recursive-type-json.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "name": "User1",
        "id": 1,
        "friend": {
          "name": "User2",
          "id": 2,
          "friend": {
            "name": "User2",
            "id": 2
          }
        }
      }
    }
  }
}
