tests/snapshots/execution_spec__recursive-type-json.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  user(id: Int!): User
}

scalar Url

type User {
  friend: User
  id: Int!
  name: String!
}

schema {
  query: Query
}
